# nonebot-plugin-anipusher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot-plugin-anipusher/: __init__.py  launcher.py  test_enum2.py
nonebot-plugin-anipusher/core/: __init__.py  monitor.py
nonebot-plugin-anipusher/core/command/: function.py  subscribe.py
nonebot-plugin-anipusher/core/dataprocess/: abstract_processor.py
nonebot-plugin-anipusher/core/dataprocess/processor/: emby_processor.py
nonebot-plugin-anipusher/core/monitor_core/processor/: anime_process.py  emby_processor.py
nonebot-plugin-anipusher/core/push_core/: data_service.py  handler.py  image_service.py
nonebot-plugin-anipusher/core/pushprocess/: data_picker.py  image_selector.py  message_factory.py  push_buffer.py  push_manager.py
nonebot-plugin-anipusher/database/: schema_manager.py  statement_generator.py
nonebot-plugin-anipusher/exceptions/: plugin_errors.py
nonebot-plugin-anipusher/initialize/: config_load.py  connect_check.py  db_check.py  processor_import.py
nonebot-plugin-anipusher/model/: config_model.py
nonebot-plugin-anipusher/res/: default_template.yaml
